Add gitignore, remove certain files from git, start changing content

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -4,12 +4,12 @@ block content
   section.hero
     .hero-inner
       h1.hero-description 
-        | Hello! 
+        | I'm Kellen Hawley.
         br
-        | My name is 
-        em Alex Miley
+        | And I'm a web 
+        em application 
         br
-        | and I'm a web developer.
+        | developer.
 
 
   .about-outer
