Update content, styles

--- a/src/assets/css/globals/_variables.scss
+++ b/src/assets/css/globals/_variables.scss
@@ -5,11 +5,13 @@ $f-sans: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 // Colors
 $c-white: #fff;
 $c-off_white: #f6f6f6;
-$c-dark_green: #0a2126;
+$c-dark_green: #05260C;
+$c-forest_green: #05260C;
 $c-dark_aqua: #033649;
 $c-aqua: #036564;
 $c-brown: #cdb380;
-$c-cream: #e8ddcb;
+$c-cream: #D1C3AB;
+$c-dark_cream: #87715A;
 
-// Functional name for colors 
+// Functional name for colors
 $c-hero-bg: #eee;
