--- a/src/assets/css/modules/_headline.scss
+++ b/src/assets/css/modules/_headline.scss
@@ -1,5 +1,5 @@
-.hero {
-  background-color: $c-hero-bg;
+.headline {
+  background: transparent;
 
   @include bp(baby-bear) {
     height: 300px;
@@ -14,29 +14,20 @@
   }
 }
 
-.hero-inner {
+.headline-inner {
   @extend %container;
   height: 100%;
   width: 100%;
-  background: url(/images/hero_sml.jpg) no-repeat center center;
-  background-size: cover;
-
-  @include bp(mama-bear) {
-    background-image: url(/images/hero_med.jpg);
-  }
-
-  @include bp(papa-bear) {
-    background-image: url(/images/hero_lrg.jpg);
-  }
+  background: transparent;
 }
 
-.hero-description {
+.headline-description {
   max-width: 800px;
   padding: 20px;
   margin: auto;
   font-size: 2em;
   font-family: $f-serif;
-  color: $c-off_white;
+  color: $c-forest_green;
   text-align: center;
   line-height: 1.5;
 
