--- a/src/shared/footer.jade
+++ b/src/shared/footer.jade
@@ -1,26 +1,26 @@
 footer.main_footer
   #contact.main_footer-container
     .contact-item
-      a(href="mailto:alex.miley@gmail.com")
+      a(href="mailto:hawleykc@gmail.com")
         .icon-mail
-        | alex.miley
+        | hawleykc
 
     .contact-item
-      a(href="tel:5105997639")
+      a(href="tel:3605405218")
         .icon-phone
-        | (510) 599-7639
+        | (360) 540-5218
+
+    //- .contact-item
+    //-   a(href="/resume/index.html" target="_blank")
+    //-     .icon-note
+    //-     | My r&eacute;sum&eacute;
 
     .contact-item
-      a(href="/resume/index.html" target="_blank")
-        .icon-note
-        | My r&eacute;sum&eacute;
-
-    .contact-item
-      a(href="http://www.linkedin.com/in/amiley" target="_blank")
+      a(href="http://www.linkedin.com/in/hawleykc" target="_blank")
         .icon-linkedin
-        | amiley
+        | hawleykc
 
     .contact-item
-      a(href="https://github.com/yaksandpie" target="_blank")
+      a(href="https://github.com/beaksandclaws" target="_blank")
         .icon-github
-        | yaksandpie
+        | beaksandclaws
