--- a/src/assets/css/globals/_base.scss
+++ b/src/assets/css/globals/_base.scss
@@ -1,12 +1,25 @@
 //  apply a natural box layout model to all elements  for more info: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * {
-	box-sizing: border-box; 
+	box-sizing: border-box;
 }
 
 body {
   font-size: 15px;
   line-height: 1.2;
   color: $c-dark_green;
+  height: 100%;
+  width: 100%;
+  background: url(/images/forest_sml.jpg) no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  @include bp(mama-bear) {
+    background-image: url(/images/forest_med.jpg);
+  }
+
+  @include bp(papa-bear) {
+    background-image: url(/images/forest_lrg.jpg);
+  }
 }
 
 a {
@@ -23,6 +36,10 @@ a {
 
 em {
   color: $c-cream;
+
+  @include bp(papa-bear) {
+    color: $c-dark_cream;
+  }
 }
 
 h3 {
