--- a/src/shared/_favicons.jade
+++ b/src/shared/_favicons.jade
@@ -5,8 +5,8 @@ link(rel="shortcut icon" href="/images/favicons/favicon.ico")
 link(rel="icon" href="/images/favicons/favicon.ico")
 link(rel="icon" href="/images/favicons/favicon-16.png" sizes="16x16")
 link(rel="icon" href="/images/favicons/favicon-32.png" sizes="32x32")
+link(rel="icon" href="/images/favicons/favicon-60.png" sizes="60x60")
 link(rel="icon" href="/images/favicons/favicon-96.png" sizes="96x96")
-link(rel="icon" href="/images/favicons/favicon-160.png" sizes="160x160")
 link(rel="icon" href="/images/favicons/favicon-196.png" sizes="196x196")
 
 //- For iPad with high-resolution Retina display running iOS ≥ 7:
@@ -26,6 +26,10 @@ link(rel="apple-touch-icon" sizes="76x76" href="/images/favicons/favicon-76.png"
 
 //- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6:
 link(rel="apple-touch-icon" sizes="72x72" href="/images/favicons/favicon-72.png")
+
+//- Others
+link(rel="apple-touch-icon" sizes="57x57" href="/images/favicons/favicon-57.png")
+link(rel="apple-touch-icon" sizes="60x60" href="/images/favicons/favicon-60.png")
 
 //- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices:
 link(rel="apple-touch-icon" href="/images/favicon-152.png")
