replace fonts, update content and styles, clean out resume

--- a/src/assets/css/globals/_icons.scss
+++ b/src/assets/css/globals/_icons.scss
@@ -1,6 +1,6 @@
 // quick mixin for using icon font in :before :after
 @mixin icon_stuff() {
-  font-family: 'icons';
+  font-family: 'fontawesome-webfont';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -17,62 +17,22 @@
   @include icon_stuff();
 }
 
-.icon-facebook:before {
-  content: "\ea8c";
-}
-
 .icon-twitter:before {
-  content: "\ea91";
+  content: "\f099";
 }
 
 .icon-github:before {
-  content: "\eab3";
+  content: "\f092";
 }
 
 .icon-linkedin:before {
-  content: "\eac9";
-}
-
-.icon-heart:before {
-  content: "\e600";
-}
-
-.icon-sound:before {
-  content: "\e605";
-}
-
-.icon-user:before {
-  content: "\e606";
-}
-
-.icon-bulb:before {
-  content: "\e607";
-}
-
-.icon-pen:before {
-  content: "\e601";
+  content: "\f0e1";
 }
 
 .icon-phone:before {
-  content: "\e608";
+  content: "\f095";
 }
 
 .icon-mail:before {
-  content: "\e609";
-}
-
-.icon-note:before {
-  content: "\e60a";
-}
-
-.icon-paperplane:before {
-  content: "\e602";
-}
-
-.icon-study:before {
-  content: "\e603";
-}
-
-.icon-lab:before {
-  content: "\e604";
+  content: "\f003";
 }
