--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -20,22 +20,23 @@ block content
 
   .skills-outer
     section#skills.skills
-      section.skills-intro A few things I know / have worked with
+      section.skills-intro A few things I know / have worked with.
       section.skills-description
         .skills-tool
           .skills-tools-content
-            h3 Frameworks/Languages
+            h3 The Code
             ul
               li Ruby on Rails
               li Sass
               li CoffeeScript
               li HAML
+              li NodeJS
               li Perl
               li PHP
 
         .skills-tool
           .skills-tools-content
-            h3 Databases
+            h3 The Storage
             ul
               li MySQL
               li Redis
@@ -43,17 +44,18 @@ block content
               li DynamoDB
               li Amazon S3
               li Oracle
+              li PostgreSQL
 
         .skills-tool
           .skills-tools-content
-            h3 Other/Misc
+            h3 The Other
             ul
-              li Mac OS
-              li Linux (Gentoo)
-              li NodeJS
               li Git
               li SVN
               li Sublime Text 3
+              li Apache
+              li Mac OS
+              li Linux (Gentoo)
 
   //- .work-outer
   //-   section#work.work
