--- a/src/shared/footer.jade
+++ b/src/shared/footer.jade
@@ -10,10 +10,10 @@ footer.main_footer
         .icon-phone
         | (360) 540-5218
 
-    //- .contact-item
-    //-   a(href="/resume/index.html" target="_blank")
-    //-     .icon-note
-    //-     | My r&eacute;sum&eacute;
+    .contact-item
+      a(href="https://github.com/beaksandclaws" target="_blank")
+        .icon-github
+        | beaksandclaws
 
     .contact-item
       a(href="http://www.linkedin.com/in/hawleykc" target="_blank")
@@ -21,6 +21,6 @@ footer.main_footer
         | hawleykc
 
     .contact-item
-      a(href="https://github.com/beaksandclaws" target="_blank")
-        .icon-github
+      a(href="https://twitter.com/beaksandclaws" target="_blank")
+        .icon-twitter
         | beaksandclaws
