--- a/src/assets/css/globals/_fonts.scss
+++ b/src/assets/css/globals/_fonts.scss
@@ -2,7 +2,7 @@
     font-family: 'Volkhov';
     src: url('/fonts/volkhov-regular-webfont.eot');
     src: url('/fonts/volkhov-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/volkhov-regular-webfont.woff') format('woff'),
+         url('/fonts/volkhov-regular-webfont.woff2') format('woff2'),
          url('/fonts/volkhov-regular-webfont.ttf') format('truetype'),
          url('/fonts/volkhov-regular-webfont.svg#lato_regular') format('svg');
     font-weight: normal;
@@ -10,12 +10,12 @@
 }
 
 @font-face {
-  font-family: 'icons';
-  src:url('/fonts/icons.eot?-d71v2d');
-  src:url('/fonts/icons.eot?#iefix-d71v2d') format('embedded-opentype'),
-    url('/fonts/icons.woff?-d71v2d') format('woff'),
-    url('/fonts/icons.ttf?-d71v2d') format('truetype'),
-    url('/fonts/icons.svg?-d71v2d#icons') format('svg');
+  font-family: 'fontawesome-webfont';
+  src:url('/fonts/fontawesome-webfont.eot');
+  src:url('/fonts/fontawesome-webfont.eot?#iefi') format('embedded-opentype'),
+    url('/fonts/fontawesome-webfont.woff') format('woff'),
+    url('/fonts/fontawesome-webfont.ttf') format('truetype'),
+    url('/fonts/fontawesome-webfont.svg#fontawesome-webfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
