--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -20,7 +20,7 @@ block content
 
   .skills-outer
     section#skills.skills
-      section.skills-intro A few things I know / have worked with.
+      section.skills-intro A few things I know.
       section.skills-description
         .skills-tool
           .skills-tools-content
@@ -50,6 +50,7 @@ block content
           .skills-tools-content
             h3 The Other
             ul
+              li TDD
               li Git
               li SVN
               li Sublime Text 3
