remove footer link

--- a/src/shared/footer.jade
+++ b/src/shared/footer.jade
@@ -20,7 +20,7 @@ footer.main_footer
         .icon-linkedin
         | hawleykc
 
-    .contact-item
-      a(href="https://twitter.com/beaksandclaws" target="_blank")
-        .icon-twitter
-        | beaksandclaws
+    //- .contact-item
+    //-   a(href="https://twitter.com/beaksandclaws" target="_blank")
+    //-     .icon-twitter
+    //-     | beaksandclaws
