--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -20,14 +20,14 @@ block content
 
   .skills-outer
     section#skills.skills
-      section.skills-intro A few things I know.
+      section.skills-intro A few of the things I know.
       section.skills-description
         .skills-tool
           .skills-tools-content
             h3 The Code
             ul
               li Ruby on Rails
-              li Sass
+              li SCSS
               li CoffeeScript
               li HAML
               li NodeJS
@@ -53,7 +53,7 @@ block content
               li TDD
               li Git
               li SVN
-              li Sublime Text 3
+              li Regex
               li Apache
               li Mac OS
               li Linux (Gentoo)
