Update copy to include React

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -33,6 +33,7 @@ block content
               li NodeJS
               li Perl
               li PHP
+              li ReactJS
 
         .skills-tool
           .skills-tools-content
