--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -28,12 +28,11 @@ block content
             ul
               li Ruby on Rails
               li SCSS
-              li CoffeeScript
-              li HAML
+              li ReactJS
               li NodeJS
+              li HAML
               li Perl
               li PHP
-              li ReactJS
 
         .skills-tool
           .skills-tools-content
@@ -56,8 +55,8 @@ block content
               li SVN
               li Regex
               li Apache
+              li Linux
               li Mac OS
-              li Linux (Gentoo)
 
   //- .work-outer
   //-   section#work.work
